--- a/docs/source/assets/refs/refs-SUEWS.bib
+++ b/docs/source/assets/refs/refs-SUEWS.bib
@@ -1,7 +1,310 @@
-%comment{This file was created with betterbib v3.5.0.}
+%comment{This file was created with betterbib v4.0.2.}
 
 
-@article{Järvi2017,
+@article{T19,
+ author = {Theeuwes, Natalie E. and Ronda, Reinder J. and Harman, Ian N. and Christen, Andreas and Grimmond, C. Sue B.},
+ doi = {10.1007/s10546-019-00472-1},
+ url = {https://doi.org/10.1007/s10546-019-00472-1},
+ year = {2019},
+ month = sep,
+ publisher = {Springer Science and Business Media LLC},
+ volume = {173},
+ number = {3},
+ pages = {321-348},
+ title = {Parametrizing Horizontally-Averaged Wind and Temperature Profiles in the Urban Roughness Sublayer},
+ source = {Crossref},
+ journal = {Boundary-Layer Meteorol},
+ issn = {0006-8314, 1573-1472},
+}
+
+@article{LG2012,
+ author = {Loridan, Thomas and Grimmond, C. S. B.},
+ doi = {10.1175/jamc-d-11-038.1},
+ url = {https://doi.org/10.1175/jamc-d-11-038.1},
+ year = {2012},
+ month = feb,
+ publisher = {American Meteorological Society},
+ volume = {51},
+ number = {2},
+ pages = {219-241},
+ title = {Characterization of Energy Flux Partitioning in Urban Environments: {Links} with Surface Seasonal Properties},
+ source = {Crossref},
+ journal = {J. Appl. Meteorol. Clim.},
+ issn = {1558-8424, 1558-8432},
+}
+
+@article{Leena2014,
+ author = {Järvi, L. and Grimmond, C. S. B. and Taka, M. and Nordbo, A. and Setälä, H. and Strachan, I. B.},
+ doi = {10.5194/gmd-7-1691-2014},
+ url = {https://doi.org/10.5194/gmd-7-1691-2014},
+ year = {2014},
+ month = aug,
+ publisher = {Copernicus GmbH},
+ title = {Development of the Surface Urban Energy and Water Balance Scheme {(SUEWS)} for cold climate cities},
+ number = {4},
+ pages = {1691-1711},
+ source = {Crossref},
+ volume = {7},
+ journal = {Geosci. Model Dev.},
+ issn = {1991-9603},
+}
+
+@article{Shiho2015,
+ author = {Onomura, S. and Grimmond, C.S.B. and Lindberg, F. and Holmer, B. and Thorsson, S.},
+ doi = {10.1016/j.uclim.2014.11.001},
+ url = {https://doi.org/10.1016/j.uclim.2014.11.001},
+ year = {2015},
+ month = mar,
+ publisher = {Elsevier BV},
+ volume = {11},
+ pages = {1-23},
+ title = {Meteorological forcing data for urban outdoor thermal comfort models from a coupled convective boundary layer and surface energy balance scheme},
+ source = {Crossref},
+ journal = {Urban Clim.},
+ issn = {2212-0955},
+}
+
+@article{FL2008,
+ author = {Lindberg, Fredrik and Holmer, Björn and Thorsson, Sofia},
+ doi = {10.1007/s00484-008-0162-7},
+ url = {https://doi.org/10.1007/s00484-008-0162-7},
+ year = {2008},
+ month = jun,
+ publisher = {Springer Science and Business Media LLC},
+ volume = {52},
+ number = {7},
+ pages = {697-713},
+ title = {{SOLWEIG} 1.0 -- Modelling spatial variations of {3D} radiant fluxes and mean radiant temperature in complex urban settings},
+ source = {Crossref},
+ journal = {Int J Biometeorol},
+ issn = {0020-7128, 1432-1254},
+}
+
+@article{FL2011,
+ author = {Lindberg, Fredrik and Grimmond, C. S. B.},
+ doi = {10.1007/s00704-010-0382-8},
+ url = {https://doi.org/10.1007/s00704-010-0382-8},
+ year = {2011},
+ month = jan,
+ publisher = {Springer Science and Business Media LLC},
+ volume = {105},
+ number = {3-4},
+ pages = {311-323},
+ title = {The influence of vegetation and building morphology on shadow patterns and mean radiant temperatures in urban areas: {Model} development and evaluation},
+ source = {Crossref},
+ journal = {Theor Appl Climatol},
+ issn = {0177-798X, 1434-4483},
+}
+
+@article{G91OHM,
+ author = {Grimmond, C.S.B. and Cleugh, H.A. and Oke, T.R.},
+ doi = {10.1016/0957-1272(91)90003-w},
+ url = {https://doi.org/10.1016/0957-1272(91)90003-w},
+ year = {1991},
+ month = jan,
+ publisher = {Elsevier BV},
+ volume = {25},
+ number = {3},
+ pages = {311-326},
+ title = {An objective urban heat storage model and its comparison with other schemes},
+ source = {Crossref},
+ journal = {Atmospheric Environment. Part B. Urban Atmosphere},
+ issn = {0957-1272},
+}
+
+@article{G86,
+ author = {Grimmond, C. S. B. and Oke, T. R. and Steyn, D. G.},
+ doi = {10.1029/wr022i010p01397},
+ url = {https://doi.org/10.1029/wr022i010p01397},
+ year = {1986},
+ month = sep,
+ publisher = {American Geophysical Union (AGU)},
+ volume = {22},
+ number = {10},
+ pages = {1397-1403},
+ title = {Urban Water Balance: {1.} A Model for Daily Totals},
+ source = {Crossref},
+ journal = {Water Resour. Res.},
+ issn = {0043-1397},
+}
+
+@article{GO99,
+ author = {Grimmond, C. S. B. and Oke, T. R.},
+ title = {Heat Storage in Urban Areas: {Local-scale} Observations and Evaluation of a Simple Model},
+ doi = {10.1175/1520-0450(1999)038<0922:hsiual>2.0.co;2},
+ number = {7},
+ pages = {922-940},
+ source = {Crossref},
+ url = {https://doi.org/10.1175/1520-0450(1999)038<0922:hsiual>2.0.co;2},
+ volume = {38},
+ journal = {J. Appl. Meteor.},
+ publisher = {American Meteorological Society},
+ issn = {0894-8763, 1520-0450},
+ year = {1999},
+ month = jul,
+}
+
+@article{O05,
+ author = {Offerle, B. and Grimmond, C. S. B. and Fortuniak, K.},
+ doi = {10.1002/joc.1198},
+ number = {10},
+ pages = {1405-1419},
+ source = {Crossref},
+ url = {https://doi.org/10.1002/joc.1198},
+ volume = {25},
+ journal = {Int. J. Climatol.},
+ publisher = {Wiley},
+ title = {Heat storage and anthropogenic heat flux in relation to the energy balance of a central {European} city centre},
+ issn = {0899-8418, 1097-0088},
+ year = {2005},
+ month = aug,
+}
+
+@article{S17,
+ author = {Sun, Ting and Wang, Zhi-Hua and Oechel, Walter C. and Grimmond, Sue},
+ title = {The Analytical Objective Hysteresis Model {(AnOHM} v1.0): {Methodology} to determine bulk storage heat flux coefficients},
+ doi = {10.5194/gmd-10-2875-2017},
+ number = {7},
+ pages = {2875-2890},
+ source = {Crossref},
+ url = {https://doi.org/10.5194/gmd-10-2875-2017},
+ volume = {10},
+ journal = {Geosci. Model Dev.},
+ publisher = {Copernicus GmbH},
+ issn = {1991-9603},
+ year = {2017},
+ month = jul,
+}
+
+@article{GO02,
+ author = {Grimmond, C. S. B. and Oke, T. R.},
+ title = {Turbulent Heat Fluxes in Urban Areas: {Observations} and a Local-Scale Urban Meteorological Parameterization Scheme {(LUMPS)}},
+ doi = {10.1175/1520-0450(2002)041<0792:thfiua>2.0.co;2},
+ number = {7},
+ pages = {792-810},
+ source = {Crossref},
+ url = {https://doi.org/10.1175/1520-0450(2002)041<0792:thfiua>2.0.co;2},
+ volume = {41},
+ journal = {J. Appl. Meteor.},
+ publisher = {American Meteorological Society},
+ issn = {0894-8763, 1520-0450},
+ year = {2002},
+ month = jul,
+}
+
+@article{L13,
+ author = {Lindberg, F. and Grimmond, C.S.B. and Yogeswaran, N. and Kotthaus, S. and Allen, L.},
+ doi = {10.1016/j.uclim.2013.03.002},
+ url = {https://doi.org/10.1016/j.uclim.2013.03.002},
+ year = {2013},
+ month = jul,
+ publisher = {Elsevier BV},
+ volume = {4},
+ pages = {1-15},
+ title = {Impact of city changes and weather on anthropogenic heat flux in {Europe} 1995--2015},
+ source = {Crossref},
+ journal = {Urban Clim.},
+ issn = {2212-0955},
+}
+
+@article{A11,
+ author = {Allen, L. and Lindberg, F. and Grimmond, C. S. B.},
+ doi = {10.1002/joc.2210},
+ url = {https://doi.org/10.1002/joc.2210},
+ year = {2010},
+ month = sep,
+ publisher = {Wiley},
+ volume = {31},
+ number = {13},
+ pages = {1990-2005},
+ title = {Global to city scale urban anthropogenic heat flux: {Model} and variability},
+ source = {Crossref},
+ journal = {Int. J. Climatol.},
+ issn = {0899-8418},
+}
+
+@article{I11,
+ author = {Iamarino, Mario and Beevers, Sean and Grimmond, C. S. B.},
+ doi = {10.1002/joc.2390},
+ url = {https://doi.org/10.1002/joc.2390},
+ year = {2011},
+ month = jul,
+ publisher = {Wiley},
+ volume = {32},
+ number = {11},
+ pages = {1754-1767},
+ title = {High-resolution (space, time) anthropogenic heat emissions: {London} 1970-2025},
+ source = {Crossref},
+ journal = {Int. J. Climatol.},
+ subtitle = {HIGH-RESOLUTION ANTHROPOGENIC HEAT EMISSIONS: LONDON 1970-2025},
+ issn = {0899-8418},
+}
+
+@article{L11,
+ author = {Loridan, Thomas and Grimmond, C. S. B. and Offerle, Brian D. and Young, Duick T. and Smith, Thomas E. L. and Järvi, Leena and Lindberg, Fredrik},
+ title = {Local-Scale Urban Meteorological Parameterization Scheme {(LUMPS):} {Longwave} Radiation Parameterization and Seasonality-Related Developments},
+ doi = {10.1175/2010jamc2474.1},
+ number = {1},
+ pages = {185-202},
+ source = {Crossref},
+ url = {https://doi.org/10.1175/2010jamc2474.1},
+ volume = {50},
+ journal = {J. Appl. Meteorol. Clim.},
+ publisher = {American Meteorological Society},
+ issn = {1558-8432, 1558-8424},
+ year = {2011},
+ month = jan,
+}
+
+@article{GO91,
+ author = {Grimmond, C. S. B. and Oke, T. R.},
+ title = {An evapotranspiration-interception model for urban areas},
+ doi = {10.1029/91wr00557},
+ number = {7},
+ pages = {1739-1755},
+ source = {Crossref},
+ url = {https://doi.org/10.1029/91wr00557},
+ volume = {27},
+ journal = {Water Resour. Res.},
+ publisher = {American Geophysical Union (AGU)},
+ issn = {0043-1397},
+ year = {1991},
+ month = jul,
+}
+
+@article{O03,
+ author = {Offerle, B. and Grimmond, C. S. B. and Oke, T. R.},
+ title = {Parameterization of Net All-Wave Radiation for Urban Areas},
+ doi = {10.1175/1520-0450(2003)042<1157:ponarf>2.0.co;2},
+ number = {8},
+ pages = {1157-1173},
+ source = {Crossref},
+ url = {https://doi.org/10.1175/1520-0450(2003)042<1157:ponarf>2.0.co;2},
+ volume = {42},
+ journal = {J. Appl. Meteor.},
+ publisher = {American Meteorological Society},
+ issn = {0894-8763, 1520-0450},
+ year = {2003},
+ month = aug,
+}
+
+@article{J11,
+ author = {Järvi, L. and Grimmond, C.S.B. and Christen, A.},
+ title = {The Surface Urban Energy and Water Balance Scheme {(SUEWS):} {Evaluation} in {Los} {Angeles} and {Vancouver}},
+ journal = {J. Hydrol.},
+ doi = {10.1016/j.jhydrol.2011.10.001},
+ number = {3-4},
+ pages = {219-237},
+ source = {Crossref},
+ url = {https://doi.org/10.1016/j.jhydrol.2011.10.001},
+ volume = {411},
+ publisher = {Elsevier BV},
+ issn = {0022-1694},
+ year = {2011},
+ month = dec,
+}
+
+@article{J17,
  author = {Järvi, L. and Grimmond, C. S. B. and McFadden, J. P. and Christen, A. and Strachan, I. B. and Taka, M. and Warsta, L. and Heimann, M.},
  title = {Warming effects on the urban hydrology in cold climate regions},
  journal = {Sci Rep},
@@ -18,7 +321,7 @@
  month = jul,
 }
 
-@article{KOKKONEN201836,
+@article{K18UC,
  author = {Kokkonen, T.V. and Grimmond, C.S.B. and Räty, O. and Ward, H.C. and Christen, A. and Oke, T.R. and Kotthaus, S. and Järvi, L.},
  title = {Sensitivity of Surface Urban Energy and Water Balance Scheme {(SUEWS)} to downscaling of reanalysis forcing data},
  journal = {Urban Clim.},
@@ -36,10 +339,10 @@
  month = mar,
 }
 
-@article{WARD2017142,
+@article{WG16,
  author = {Ward, H.C. and Grimmond, C.S.B.},
  title = {Assessing the impact of changes in surface cover, human behaviour and climate on energy partitioning across Greater {London}},
- journal = {Landscape Urban Plann.},
+ journal = {Landscape Urban Plan.},
  volume = {165},
  pages = {142-161},
  year = {2017},
@@ -53,43 +356,12 @@
  month = sep,
 }
 
-@article{gmd-7-1691-2014,
- author = {Järvi, L. and Grimmond, C. S. B. and Taka, M. and Nordbo, A. and Setälä, H. and Strachan, I. B.},
- title = {Development of the Surface Urban Energy and Water Balance Scheme {(SUEWS)} for cold climate cities},
- journal = {Geosci. Model Dev.},
- volume = {7},
- year = {2014},
- number = {4},
- pages = {1691-1711},
- url = {https://doi.org/10.5194/gmd-7-1691-2014},
- doi = {10.5194/gmd-7-1691-2014},
- source = {Crossref},
- publisher = {Copernicus GmbH},
- issn = {1991-9603},
- month = aug,
-}
 
-@article{ONOMURA20151,
- author = {Onomura, S. and Grimmond, C.S.B. and Lindberg, F. and Holmer, B. and Thorsson, S.},
- title = {Meteorological forcing data for urban outdoor thermal comfort models from a coupled convective boundary layer and surface energy balance scheme},
- journal = {Urban Clim.},
- volume = {11},
- pages = {1-23},
- year = {2015},
- issn = {2212-0955},
- doi = {10.1016/j.uclim.2014.11.001},
- url = {https://doi.org/10.1016/j.uclim.2014.11.001},
- keywords = {Boundary layer, Urban land surface model, Surface energy balance, Outdoor thermal comfort},
- abstract = {Site-specific meteorological forcing appropriate for applications such as urban outdoor thermal comfort simulations can be obtained using a newly coupled scheme that combines a simple slab convective boundary layer (CBL) model and urban land surface model (ULSM) (here two ULSMs are considered). The former simulates daytime CBL height, air temperature and humidity, and the latter estimates urban surface energy and water balance fluxes accounting for changes in land surface cover. The coupled models are tested at a suburban site and two rural sites, one irrigated and one unirrigated grass, in Sacramento, U.S.A. All the variables modelled compare well to measurements (e.g. coefficient of determination=0.97 and root mean square error=1.5$^\circ$C for air temperature). The current version is applicable to daytime conditions and needs initial state conditions for the CBL model in the appropriate range to obtain the required performance. The coupled model allows routine observations from distant sites (e.g. rural, airport) to be used to predict air temperature and relative humidity in an urban area of interest. This simple model, which can be rapidly applied, could provide urban data for applications such as air quality forecasting and building energy modelling, in addition to outdoor thermal comfort.},
- source = {Crossref},
- publisher = {Elsevier BV},
- month = mar,
-}
 
-@article{doi:10.1175/JAMC-D-16-0082.1,
+@article{A16,
  author = {Ao, Xiangyu and Grimmond, C. S. B. and Liu, Dongwei and Han, Zhihui and Hu, Ping and Wang, Yadong and Zhen, Xinrong and Tan, Jianguo},
  title = {Radiation Fluxes in a Business District of Shanghai, China},
- journal = {J. Appl. Meteor. Climatol.},
+ journal = {J. Appl. Meteorol. Clim.},
  volume = {55},
  number = {11},
  pages = {2451-2468},
@@ -103,7 +375,7 @@
  month = nov,
 }
 
-@article{WARD20161,
+@article{W16,
  author = {Ward, H.C. and Kotthaus, S. and Järvi, L. and Grimmond, C.S.B.},
  title = {Surface Urban Energy and Water Balance Scheme {(SUEWS):} {Development} and evaluation at two {UK} sites},
  journal = {Urban Clim.},
@@ -114,13 +386,13 @@
  doi = {10.1016/j.uclim.2016.05.001},
  url = {https://doi.org/10.1016/j.uclim.2016.05.001},
  keywords = {Evaporation, SUEWS, UK cities, Urban energy balance, Urban water balance},
- abstract = {The Surface Urban Energy and Water Balance Scheme (SUEWS) is evaluated at two locations in the UK: a dense urban site in the centre of London and a residential suburban site in Swindon. Eddy covariance observations of the turbulent fluxes are used to assess model performance over a two-year period (2011$-$2013). The distinct characteristics of the sites mean their surface energy exchanges differ considerably. The model suggests the largest differences can be attributed to surface cover (notably the proportion of vegetated versus impervious area) and the additional energy supplied by human activities. SUEWS performs better in summer than winter, and better at the suburban site than the dense urban site. One reason for this is the bias towards suburban summer field campaigns in observational data used to parameterise this (and other) model(s). The suitability of model parameters (such as albedo, energy use and water use) for the UK sites is considered and, where appropriate, alternative values are suggested. An alternative parameterisation for the surface conductance is implemented, which permits greater soil moisture deficits before evaporation is restricted at non-irrigated sites. Accounting for seasonal variation in the estimation of storage heat flux is necessary to obtain realistic wintertime fluxes.},
+
  source = {Crossref},
  publisher = {Elsevier BV},
  month = dec,
 }
 
-@article{gmd-12-2781-2019,
+@article{SG19,
  author = {Sun, Ting and Grimmond, Sue},
  title = {A Python-enhanced urban land surface model {SuPy} {(SUEWS} in Python, v2019.2): {Development,} deployment and demonstration},
  journal = {Geosci. Model Dev.},
@@ -136,9 +408,9 @@
  month = jul,
 }
 
-@article{doi:10.1029/2018JD029576,
+@article{J19,
  author = {Järvi, Leena and Havu, Minttu and Ward, Helen C. and Bellucco, Veronica and McFadden, Joseph P. and Toivonen, Tuuli and Heikinheimo, Vuokko and Kolari, Pasi and Riikonen, Anu and Grimmond, C. Sue B.},
- title = {Spatial Modeling of Local-Scale Biogenic and Anthropogenic Carbon Dioxide Emissions in {Helsinki}},
+ title = {Spatial Modeling of {Local-Scale} Biogenic and Anthropogenic Carbon Dioxide Emissions in {Helsinki}},
  journal = {J. Geophys. Res. Atmos.},
  volume = {124},
  number = {15},
@@ -147,7 +419,7 @@
  doi = {10.1029/2018jd029576},
  url = {https://doi.org/10.1029/2018jd029576},
  eprint = {https://agupubs.onlinelibrary.wiley.com/doi/pdf/10.1029/2018JD029576},
- abstract = {Abstract There is a growing need to simulate the effect of urban planning on both local climate and greenhouse gas emissions. Here, a new urban surface carbon dioxide (CO2) flux module for the Surface Urban Energy and Water Balance Scheme is described and evaluated using eddy covariance observations at two sites in Helsinki in 2012. The spatial variability and magnitude of local-scale anthropogenic and biogenic CO2 flux components at high spatial (250 m $\times$ 250 m) and temporal (hourly) resolution are examined by combining high-resolution (down to 2 m) airborne lidar-derived land use data and mobility data to account for people's movement. Urban effects are included in the biogenic components parameterized using urban eddy covariance and chamber observations. Surface Urban Energy and Water Balance Scheme reproduces the seasonal and diurnal variability of the CO2 flux well. Annual totals deviate 3\% from observations in the city center and 2\% in a suburban location. In the latter, traffic is the dominant CO2 source but summertime vegetation partly offsets traffic-related emissions. In the city center, emissions from traffic and human metabolism dominate and the vegetation effect is minor due to the low proportion of vegetation surface cover (22\%). Within central Helsinki, human metabolism accounts for 39\% of the net local-scale emissions and together with road traffic is to a large extent responsible for the spatial variability of the emissions. Annually, the biogenic emissions and sinks are in near balance and thus the effect of vegetation on the carbon balance is small in this high-latitude city.},
+ abstract = {Abstract There is a growing need to simulate the effect of urban planning on both local climate and greenhouse gas emissions. Here, a new urban surface carbon dioxide (CO2) flux module for the Surface Urban Energy and Water Balance Scheme is described and evaluated using eddy covariance observations at two sites in Helsinki in 2012. The spatial variability and magnitude of local-scale anthropogenic and biogenic CO2 flux components at high spatial (250 m $\times$ 250 m) and temporal (hourly) resolution are examined by combining high-resolution (down to 2 m) airborne lidar-derived land use data and mobility data to account for people's movement. Urban effects are included in the biogenic components parameterized using urban eddy covariance and chamber observations. Surface Urban Energy and Water Balance Scheme reproduces the seasonal and diurnal variability of the CO2 flux well. Annual totals deviate 3},
  year = {2019},
  source = {Crossref},
  publisher = {American Geophysical Union (AGU)},
@@ -155,7 +427,7 @@
  month = aug,
 }
 
-@article{acp-19-7001-2019,
+@article{K19,
  author = {Kokkonen, Tom V. and Grimmond, Sue and Murto, Sonja and Liu, Huizhi and Sundström, Anu-Maija and Järvi, Leena},
  title = {Simulation of the radiative effect of haze on the urban hydrological cycle using reanalysis data in {Beijing}},
  journal = {Atmos. Chem. Phys.},
@@ -171,7 +443,7 @@
  month = may,
 }
 
-@article{doi:10.1029/2017WR022445,
+@article{K18WRR,
  author = {Kokkonen, T. V. and Grimmond, C. S. B. and Christen, A. and Oke, T. R. and Järvi, L.},
  title = {Changes to the Water Balance Over a Century of Urban Development in Two Neighborhoods: {Vancouver,} {Canada}},
  journal = {Water Resour. Res.},
@@ -182,7 +454,7 @@
  doi = {10.1029/2017wr022445},
  url = {https://doi.org/10.1029/2017wr022445},
  eprint = {https://agupubs.onlinelibrary.wiley.com/doi/pdf/10.1029/2017WR022445},
- abstract = {Abstract Hydrological cycles of two suburban neighborhoods in Vancouver, BC, during initial urban development and subsequent urban densification (1920--2010) are examined using the Surface Urban Energy and Water Balance Scheme. The two neighborhoods have different surface characteristics (as determined from aerial photographs) which impact the hydrological processes. Unlike previous studies of the effect of urbanization on the local hydrology, densification of already built lots is explored with a focus on the neighborhood scale. Human behavioral changes to irrigation are accounted for in the simulations. Irrigation is the dominant factor, accounting for up to 56\% of the water input on an annual basis in the study areas. This may surpass garden needs and go to runoff. Irrigating once a week would provide sufficient water for the garden. Without irrigation, evaporation would have decreased over the 91 years at a rate of up to 1.4 mm/year and runoff increased at 4.0 mm/year with the increase in impervious cover. Similarly without irrigation, the ratio of sensible heat flux to the available energy would have increased over the 91 years at a rate of up to 0.003 per year. Urbanization and densification cause an increase in runoff and increase risk of surface flooding. Small daily runoff events with short return periods have increased over the century, whereas the occurrence of heavy daily runoff events (return period > 52 days) are not affected. The results can help us to understand the dominant factors in the suburban hydrological cycle and can inform urban planning.},
+ abstract = {Abstract Hydrological cycles of two suburban neighborhoods in Vancouver, BC, during initial urban development and subsequent urban densification (1920--2010) are examined using the Surface Urban Energy and Water Balance Scheme. The two neighborhoods have different surface characteristics (as determined from aerial photographs) which impact the hydrological processes. Unlike previous studies of the effect of urbanization on the local hydrology, densification of already built lots is explored with a focus on the neighborhood scale. Human behavioral changes to irrigation are accounted for in the simulations. Irrigation is the dominant factor, accounting for up to 56},
  year = {2018},
  source = {Crossref},
  publisher = {American Geophysical Union (AGU)},
@@ -190,10 +462,10 @@
  month = sep,
 }
 
-@article{doi:10.1175/JHM-D-18-0057.1,
+@article{A18,
  author = {Ao, Xiangyu and Grimmond, C. S. B. and Ward, H. C. and Gabey, A. M. and Tan, Jianguo and Yang, Xiu-Qun and Liu, Dongwei and Zhi, Xing and Liu, Hongya and Zhang, Ning},
  title = {Evaluation of the Surface Urban Energy and Water Balance Scheme {(SUEWS)} at a Dense Urban Site in Shanghai: {Sensitivity} to Anthropogenic Heat and Irrigation},
- journal = {J. Hydrometeor.},
+ journal = {J. Hydrometeorol.},
  volume = {19},
  number = {12},
  pages = {1983-2005},
