--- a/docs/source/assets/refs/refs-SUEWS.bib
+++ b/docs/source/assets/refs/refs-SUEWS.bib
@@ -17,7 +17,7 @@
  issn = {0006-8314, 1573-1472},
 }
 
-@article{LG2012,
+@article{LG12,
  author = {Loridan, Thomas and Grimmond, C. S. B.},
  doi = {10.1175/jamc-d-11-038.1},
  url = {https://doi.org/10.1175/jamc-d-11-038.1},
@@ -33,7 +33,7 @@
  issn = {1558-8424, 1558-8432},
 }
 
-@article{Leena2014,
+@article{L14,
  author = {Järvi, L. and Grimmond, C. S. B. and Taka, M. and Nordbo, A. and Setälä, H. and Strachan, I. B.},
  doi = {10.5194/gmd-7-1691-2014},
  url = {https://doi.org/10.5194/gmd-7-1691-2014},
@@ -49,7 +49,7 @@
  issn = {1991-9603},
 }
 
-@article{Shiho2015,
+@article{O15,
  author = {Onomura, S. and Grimmond, C.S.B. and Lindberg, F. and Holmer, B. and Thorsson, S.},
  doi = {10.1016/j.uclim.2014.11.001},
  url = {https://doi.org/10.1016/j.uclim.2014.11.001},
@@ -64,7 +64,7 @@
  issn = {2212-0955},
 }
 
-@article{FL2008,
+@article{F08,
  author = {Lindberg, Fredrik and Holmer, Björn and Thorsson, Sofia},
  doi = {10.1007/s00484-008-0162-7},
  url = {https://doi.org/10.1007/s00484-008-0162-7},
@@ -80,7 +80,7 @@
  issn = {0020-7128, 1432-1254},
 }
 
-@article{FL2011,
+@article{FG11,
  author = {Lindberg, Fredrik and Grimmond, C. S. B.},
  doi = {10.1007/s00704-010-0382-8},
  url = {https://doi.org/10.1007/s00704-010-0382-8},
@@ -96,7 +96,7 @@
  issn = {0177-798X, 1434-4483},
 }
 
-@article{G91OHM,
+@article{G91,
  author = {Grimmond, C.S.B. and Cleugh, H.A. and Oke, T.R.},
  doi = {10.1016/0957-1272(91)90003-w},
  url = {https://doi.org/10.1016/0957-1272(91)90003-w},
