--- a/docs/source/assets/refs/refs-others.bib
+++ b/docs/source/assets/refs/refs-others.bib
@@ -63,7 +63,7 @@
  issn = {1680-7324},
 }
 
-@article{FWC2002,
+@article{F02,
  author = {Flanagan, Lawrence B. and Wever, Linda A. and Carlson, Peter J.},
  doi = {10.1046/j.1365-2486.2002.00491.x},
  url = {https://doi.org/10.1046/j.1365-2486.2002.00491.x},
@@ -82,7 +82,7 @@ EXCHANGE},
  issn = {1354-1013},
 }
 
-@article{B2017,
+@article{B17,
  author = {Bellucco, Veronica and Marras, Serena and Grimmond, C. Susan B. and Järvi, Leena and Sirca, Costantino and Spano, Donatella},
  doi = {10.1016/j.agrformet.2016.12.011},
  url = {https://doi.org/10.1016/j.agrformet.2016.12.011},
@@ -126,7 +126,7 @@ EXCHANGE},
  issn = {0065-2504},
 }
 
-@article{S2000,
+@article{S00,
  author = {Schmid, H},
  doi = {10.1016/s0168-1923(00)00140-4},
  url = {https://doi.org/10.1016/s0168-1923(00)00140-4},
@@ -142,7 +142,7 @@ EXCHANGE},
  issn = {0168-1923},
 }
 
-@article{Kent2017b,
+@article{K17JWE,
  author = {Kent, Christoph W. and Grimmond, Sue and Gatey, David},
  doi = {10.1016/j.jweia.2017.07.016},
  url = {https://doi.org/10.1016/j.jweia.2017.07.016},
@@ -157,7 +157,7 @@ EXCHANGE},
  issn = {0167-6105},
 }
 
-@article{Kent2017a,
+@article{K17BLM,
  author = {Kent, Christoph W. and Grimmond, Sue and Barlow, Janet and Gatey, David and Kotthaus, Simone and Lindberg, Fredrik and Halios, Christos H.},
  doi = {10.1007/s10546-017-0248-z},
  url = {https://doi.org/10.1007/s10546-017-0248-z},
@@ -173,7 +173,7 @@ EXCHANGE},
  issn = {0006-8314, 1573-1472},
 }
 
-@article{Re90,
+@article{R90,
  author = {Reindl, D.T. and Beckman, W.A. and Duffie, J.A.},
  title = {Diffuse fraction correlations},
  doi = {10.1016/0038-092x(90)90060-p},
@@ -188,7 +188,7 @@ EXCHANGE},
  year = {1990},
 }
 
-@article{H1988,
+@article{H88,
  author = {Högström, Ulf},
  doi = {10.1007/bf00119875},
  url = {https://doi.org/10.1007/bf00119875},
@@ -220,7 +220,7 @@ EXCHANGE},
  issn = {0177-798X, 1434-4483},
 }
 
-@article{Mc98,
+@article{M98,
  author = {Macdonald, R.W. and Griffiths, R.F. and Hall, D.J.},
  doi = {10.1016/s1352-2310(97)00403-2},
  url = {https://doi.org/10.1016/s1352-2310(97)00403-2},
@@ -256,7 +256,7 @@ EXCHANGE},
  title = {Characteristics of the above ground runoff in sewered catchments},
 }
 
-@incollection{Ha79,
+@incollection{H79,
  author = {Halldin, S. and Grip, H. and Perttu, K.},
  doi = {10.1016/b978-0-444-41844-9.50012-3},
  url = {https://doi.org/10.1016/b978-0-444-41844-9.50012-3},
@@ -285,22 +285,23 @@ EXCHANGE},
  issn = {0043-1397},
 }
 
-@article{1978,
- author = {Comtois, Paul},
- doi = {10.7202/1000310ar},
- url = {https://doi.org/10.7202/1000310ar},
- year = {1978},
- publisher = {Consortium Erudit},
- volume = {32},
- number = {3},
- pages = {290},
- title = {Oke, {T.R.} (1978) : {Boundary} Layer Climates, Londres, Methuen, 372 p., 15,5 x 23,5 cm, $18,95},
+@article{K14,
+ author = {Konarska, Janina and Lindberg, Fredrik and Larsson, Annika and Thorsson, Sofia and Holmer, Björn},
+ title = {Transmissivity of solar radiation through crowns of single urban trees---application for outdoor thermal comfort modelling},
+ doi = {10.1007/s00704-013-1000-3},
+ number = {3-4},
+ pages = {363-376},
  source = {Crossref},
- journal = {G\'eogr. Phys. Quat.},
- issn = {0705-7199, 1492-143X},
+ url = {https://doi.org/10.1007/s00704-013-1000-3},
+ volume = {117},
+ journal = {Theor Appl Climatol},
+ publisher = {Springer Science and Business Media LLC},
+ issn = {0177-798X, 1434-4483},
+ year = {2013},
+ month = sep,
 }
 
-@article{Br03,
+@article{B03,
  author = {Breuer, Lutz and Eckhardt, Klaus and Frede, Hans-Georg},
  doi = {10.1016/s0304-3800(03)00274-6},
  url = {https://doi.org/10.1016/s0304-3800(03)00274-6},
@@ -316,7 +317,7 @@ EXCHANGE},
  issn = {0304-3800},
 }
 
-@article{Ja76,
+@article{J76,
  author = {Jarvis, P. G.},
  doi = {10.1098/rstb.1976.0035},
  url = {https://doi.org/10.1098/rstb.1976.0035},
@@ -332,7 +333,7 @@ EXCHANGE},
  issn = {0080-4622, 2054-0280},
 }
 
-@article{Au74,
+@article{A74,
  author = {Auer, August H.},
  doi = {10.1080/00431672.1974.9931684},
  url = {https://doi.org/10.1080/00431672.1974.9931684},
@@ -364,7 +365,7 @@ EXCHANGE},
  issn = {1364-8152},
 }
 
-@article{Ka07,
+@article{K07,
  author = {Kanda, M. and Kanega, M. and Kawai, T. and Moriwaki, R. and Sugawara, H.},
  doi = {10.1175/jam2500.1},
  url = {https://doi.org/10.1175/jam2500.1},
@@ -412,7 +413,7 @@ EXCHANGE},
  issn = {1520-0450, 0894-8763},
 }
 
-@article{Best2014,
+@article{BG14,
  author = {Best, M.J. and Grimmond, C.S.B.},
  doi = {10.1016/j.uclim.2013.10.006},
  url = {https://doi.org/10.1016/j.uclim.2013.10.006},
@@ -476,42 +477,44 @@ EXCHANGE},
  issn = {0022-4928, 1520-0469},
 }
 
-
-@incollection{CN1988,
-	address = {New York, NY},
-	title = {Wind},
-	isbn = {978-1-4612-1626-1},
-	url = {https://doi.org/10.1007/978-1-4612-1626-1_5},
-	abstract = {As living organisms, we are most acutely aware of three things about the wind. We know that it exerts a force on us and other objects against which it blows, it is effective in transporting heat from us, and it is highly variable in space and time. A fourth property of the wind, less obvious to the casual observer, but essential to terrestrial life as we know it, is its effective mixing of the atmospheric boundary layer of the earth. This can be illustrated by a simple example. On a hot summer day about 10 kilograms (550 moles) of water can be evaporated into the atmosphere from each square meter of vegetated ground surface. This amount of water would increase the vapor concentration in a 100 m thick air layer by 100 g m−3 (136 mmol/mol) if there were no transport out of this layer or condensation within it. This is much more water than the air could hold at normal temperature. The observed increase in vapor concentration in the first 100 meters of the atmosphere is typically less than 1 g m−3, so we can see how effective the atmosphere is for transporting and mixing. A similar calculation (Monteith, 1973) shows that photosynthesis in a normally growing crop would use all of the CO2 in a 30 m air layer above a crop in a day, yet measured CO2 concentrations have diurnal fluctuations of 15 percent or less. Without the vertical turbulent transport of heat, water vapor, CO2, oxygen, and other atmospheric constituents, the microenvironment we live in would be very inhospitable.},
-	language = {en},
-	booktitle = {An {Introduction} to {Environmental} {Biophysics}},
-	publisher = {Springer},
-	author = {Campbell, Gaylon S. and Norman, John M.},
-	editor = {Campbell, Gaylon S. and Norman, John M.},
-	year = {1998},
-	doi = {10.1007/978-1-4612-1626-1_5},
-	keywords = {Planetary Boundary Layer, Roughness Length, Vapor Concentration, Wind Profile, Wind Speed},
-	pages = {63--75},
+@inbook{CN88,
+ author = {Campbell, Gaylon S. and Norman, John M.},
+ editor = {Campbell, Gaylon S. and Norman, John M.},
+ address = {New York, NY},
+ title = {Wind},
+ isbn = {978-1-4612-1626-1},
+ url = {https://doi.org/10.1007/978-1-4612-1626-1_5},
+ abstract = {As living organisms, we are most acutely aware of three things about the wind. We know that it exerts a force on us and other objects against which it blows, it is effective in transporting heat from us, and it is highly variable in space and time. A fourth property of the wind, less obvious to the casual observer, but essential to terrestrial life as we know it, is its effective mixing of the atmospheric boundary layer of the earth. This can be illustrated by a simple example. On a hot summer day about 10 kilograms (550 moles) of water can be evaporated into the atmosphere from each square meter of vegetated ground surface. This amount of water would increase the vapor concentration in a 100 m thick air layer by 100 g m$-$3 (136 mmol/mol) if there were no transport out of this layer or condensation within it. This is much more water than the air could hold at normal temperature. The observed increase in vapor concentration in the first 100 meters of the atmosphere is typically less than 1 g m$-$3, so we can see how effective the atmosphere is for transporting and mixing. A similar calculation (Monteith, 1973) shows that photosynthesis in a normally growing crop would use all of the CO2 in a 30 m air layer above a crop in a day, yet measured CO2 concentrations have diurnal fluctuations of 15 percent or less. Without the vertical turbulent transport of heat, water vapor, CO2, oxygen, and other atmospheric constituents, the microenvironment we live in would be very inhospitable.},
+ language = {en},
+ booktitle = {An Introduction to Environmental Biophysics},
+ publisher = {Springer New York},
+ year = {1998},
+ doi = {10.1007/978-1-4612-1626-1_5},
+ keywords = {Planetary Boundary Layer, Roughness Length, Vapor Concentration, Wind Profile, Wind Speed},
+ pages = {63-75},
+ source = {Crossref},
+ chapter = {Wind},
 }
 
 @article{b71,
-	title = {Flux-{Profile} {Relationships} in the {Atmospheric} {Surface} {Layer}},
-	volume = {28},
-	issn = {0022-4928, 1520-0469},
-	url = {https://journals.ametsoc.org/view/journals/atsc/28/2/1520-0469_1971_028_0181_fprita_2_0_co_2.xml},
-	doi = {10.1175/1520-0469(1971)028<0181:FPRITA>2.0.CO;2},
-	abstract = {{\textless}section class="abstract"{\textgreater}{\textless}h2 class="abstractTitle text-title my-1" id="d2675526e64"{\textgreater}Abstract{\textless}/h2{\textgreater}{\textless}p{\textgreater}Wind and temperature profiles for a wide range of stability conditions have been analyzed in the context of Monin-Obukhov similarity theory. Direct measurements of heat and momentum fluxes enabled determination of the Obukhov length {\textless}em{\textgreater}L{\textless}/em{\textgreater}, a key independent variable in the steady-state, horizontally homogeneous, atmospheric surface layer. The free constants in several interpolation formulas can be adjusted to give excellent fits to the wind and temperature gradient data. The behavior of the gradients under neutral conditions is unusual, however, and indicates that von Kármán's constant is ∼0.35, rather than 0.40 as usually assumed, and that the ratio of eddy diffusivities for heat and momentum at neutrality is ∼1.35, compared to the often-suggested value of 1.0. The gradient Richardson number, computed from the profiles, and the Obukhov stability parameter {\textless}em{\textgreater}z{\textless}/em{\textgreater}/{\textless}em{\textgreater}L{\textless}/em{\textgreater}, computed from the measured fluxes, are found to be related approximately linearly under unstable conditions. For stable conditions the Richard on number approaches a limit of ∼0.21 as stability increases. A comparison between profile-derived and measured fluxes shows good agreement over the entire stability range of the observations.{\textless}/p{\textgreater}{\textless}/section{\textgreater}},
-	language = {EN},
-	number = {2},
-	urldate = {2021-10-28},
-	journal = {Journal of the Atmospheric Sciences},
-	author = {Businger, J. A. and Wyngaard, J. C. and Izumi, Y. and Bradley, E. F.},
-	month = mar,
-	year = {1971},
-	pages = {181--189},
-	file = {Businger et al_1971_Flux-Profile Relationships in the Atmospheric Surface Layer.pdf:/Users/sunt05/Dropbox/zotero-lib/Businger et al_1971_Flux-Profile Relationships in the Atmospheric Surface Layer.pdf:application/pdf},
+ author = {Businger, J. A. and Wyngaard, J. C. and Izumi, Y. and Bradley, E. F.},
+ title = {Flux-Profile Relationships in the Atmospheric Surface Layer},
+ volume = {28},
+ issn = {0022-4928, 1520-0469},
+ url = {https://doi.org/10.1175/1520-0469(1971)028<0181:fprita>2.0.co;2},
+ doi = {10.1175/1520-0469(1971)028<0181:fprita>2.0.co;2},
+ abstract = {{\textless }section class="abstract"{\textgreater }{\textless }h2 class="abstractTitle text-title my-1" id="d2675526e64"{\textgreater }Abstract{\textless }/h2{\textgreater }{\textless }p{\textgreater }Wind and temperature profiles for a wide range of stability conditions have been analyzed in the context of Monin-Obukhov similarity theory. Direct measurements of heat and momentum fluxes enabled determination of the Obukhov length {\textless }em{\textgreater }L{\textless }/em{\textgreater }, a key independent variable in the steady-state, horizontally homogeneous, atmospheric surface layer. The free constants in several interpolation formulas can be adjusted to give excellent fits to the wind and temperature gradient data. The behavior of the gradients under neutral conditions is unusual, however, and indicates that von K\'arm\'an's constant is $\sim$0.35, rather than 0.40 as usually assumed, and that the ratio of eddy diffusivities for heat and momentum at neutrality is $\sim$1.35, compared to the often-suggested value of 1.0. The gradient Richardson number, computed from the profiles, and the Obukhov stability parameter {\textless }em{\textgreater }z{\textless }/em{\textgreater }/{\textless }em{\textgreater }L{\textless }/em{\textgreater }, computed from the measured fluxes, are found to be related approximately linearly under unstable conditions. For stable conditions the Richard on number approaches a limit of $\sim$0.21 as stability increases. A comparison between profile-derived and measured fluxes shows good agreement over the entire stability range of the observations.{\textless }/p{\textgreater }{\textless }/section{\textgreater }},
+ language = {EN},
+ number = {2},
+ urldate = {2021-10-28},
+ journal = {J. Atmos. Sci.},
+ month = mar,
+ year = {1971},
+ pages = {181-189},
+ file = {Businger et al\_1971\_Flux-Profile Relationships in the Atmospheric Surface Layer.pdf:/Users/sunt05/Dropbox/zotero-lib/Businger et al\_1971\_Flux-Profile Relationships in the Atmospheric Surface Layer.pdf:application/pdf},
+ source = {Crossref},
+ publisher = {American Meteorological Society},
 }
-
 
 @article{K09,
  author = {Kawai, Toru and Ridwan, Mohammad Kholid and Kanda, Manabu},
@@ -529,7 +532,7 @@ EXCHANGE},
  issn = {1558-8432, 1558-8424},
 }
 
-@article{CG2001,
+@article{CG01,
  author = {Cleugh, H. A. and Grimmond, C. S. B.},
  doi = {10.1023/a:1018798928158},
  url = {https://doi.org/10.1023/a:1018798928158},
@@ -693,7 +696,6 @@ EXCHANGE},
  note = {{Comprehensive and readable}},
  url = {https://doi.org/10.1007/978-94-009-3027-8},
 }
-
 
 @incollection{Wilczak1996,
  author = {Wilczak, J. M. and Gossard, E. E. and Neff, W. D. and Eberhard, W. L.},
