--- a/docs/source/assets/refs/refs-SUEWS.bib
+++ b/docs/source/assets/refs/refs-SUEWS.bib
@@ -33,7 +33,7 @@
  issn = {1558-8424, 1558-8432},
 }
 
-@article{L14,
+@article{J14,
  author = {Järvi, L. and Grimmond, C. S. B. and Taka, M. and Nordbo, A. and Setälä, H. and Strachan, I. B.},
  doi = {10.5194/gmd-7-1691-2014},
  url = {https://doi.org/10.5194/gmd-7-1691-2014},
