--- a/docs/source/version-history/v2018b.rst
+++ b/docs/source/version-history/v2018b.rst
@@ -4,6 +4,8 @@
 Version 2018b (released 17 December 2018)
 ----------------------------------------------------
 
+`Download page (under assets) <https://github.com/Urban-Meteorology-Reading/SUEWS/releases/tag/2018b>`_
+
 - **Improvement**
 
   #. Improved calculation of OHM-related radiation terms:
