add more on dev guide

--- a/docs/source/version-history/v2014a.rst
+++ b/docs/source/version-history/v2014a.rst
@@ -1,4 +1,4 @@
-Version 2014a (released 21 February 2014)
+Version 2014a (released on 21 February 2014)
 ------------------------------------------------------
 
 #. Bug fix: External irrigation is calculated as combined from automatic
