--- a/docs/source/version-history/v2018a.rst
+++ b/docs/source/version-history/v2018a.rst
@@ -1,6 +1,6 @@
 .. _new_2018a:
 
-Version 2018a (released 2 August 2018)
+Version 2018a (released on 2 August 2018)
 ----------------------------------------------------
 - **New**
 
