--- a/docs/source/version-history/v2020a.rst
+++ b/docs/source/version-history/v2020a.rst
@@ -3,7 +3,7 @@
 
 .. _new_2020a:
 
-Version 2020a (Released on 14 May 2020)
+Version 2020a (released on 14 May 2020)
 ----------------------------------------------------
 
 .. note::
@@ -29,7 +29,7 @@ Version 2020a (Released on 14 May 2020)
 
 - **Changes**
 
-  #. A new `RoughLenHeatMethod` option `5`: adaptively choose option `1` for fully pervious surface or `2` otherwise (if any impervious surface exists).
+  #. A new `RoughLenHeatMethod` option ``5``: adaptively choose option ``1`` for fully pervious surface or ``2`` otherwise (if any impervious surface exists).
 
   #. A new column `H_maintain` is added in `SUEWS_Irrigation.txt` to set ponding water depth.
 
