--- a/docs/source/assets/refs/refs-others.bib
+++ b/docs/source/assets/refs/refs-others.bib
@@ -496,7 +496,7 @@ EXCHANGE},
  chapter = {Wind},
 }
 
-@article{b71,
+@article{B71,
  author = {Businger, J. A. and Wyngaard, J. C. and Izumi, Y. and Bradley, E. F.},
  title = {Flux-Profile Relationships in the Atmospheric Surface Layer},
  volume = {28},
@@ -730,4 +730,22 @@ EXCHANGE},
  issn = {0065-9401},
  note = {{}},
  month = jan,
+}
+
+@article{VUH85,
+ author = {Van Ulden, A. P. and Holtslag, A. A. M.},
+ title = {Estimation of Atmospheric Boundary Layer Parameters for Diffusion Applications},
+ volume = {24},
+ issn = {0733-3021},
+ url = {https://doi.org/10.1175/1520-0450(1985)024<1196:eoablp>2.0.co;2},
+ doi = {10.1175/1520-0450(1985)024<1196:eoablp>2.0.co;2},
+ language = {EN},
+ number = {11},
+ urldate = {2021-11-01},
+ journal = {J. Climate Appl. Meteor.},
+ month = nov,
+ year = {1985},
+ pages = {1196-1207},
+ source = {Crossref},
+ publisher = {American Meteorological Society},
 }
