2. Parameterisations and sub-models within SUEWS — SUEWS v2020a documentation doc of RSL Fixes #56

--- a/docs/source/assets/refs/refs-SUEWS.bib
+++ b/docs/source/assets/refs/refs-SUEWS.bib
@@ -356,8 +356,6 @@
  month = sep,
 }
 
-
-
 @article{A16,
  author = {Ao, Xiangyu and Grimmond, C. S. B. and Liu, Dongwei and Han, Zhihui and Hu, Ping and Wang, Yadong and Zhen, Xinrong and Tan, Jianguo},
  title = {Radiation Fluxes in a Business District of Shanghai, China},
@@ -386,7 +384,6 @@
  doi = {10.1016/j.uclim.2016.05.001},
  url = {https://doi.org/10.1016/j.uclim.2016.05.001},
  keywords = {Evaporation, SUEWS, UK cities, Urban energy balance, Urban water balance},
-
  source = {Crossref},
  publisher = {Elsevier BV},
  month = dec,
@@ -478,4 +475,18 @@
  publisher = {American Meteorological Society},
  issn = {1525-755X, 1525-7541},
  month = dec,
+}
+
+@article{T21,
+year = {2021},
+month = oct,
+title = {{Urban meteorological forcing data for building energy simulations}},
+author = {Tang, Yihao and Sun, Ting and Luo, Zhiwen and Omidvar, Hamidreza and Theeuwes, Natalie and Xie, Xiaoxiong and Xiong, Jie and Yao, Runming and Grimmond, Sue},
+journal = {Building and Environment},
+issn = {0360-1323},
+doi = {10.1016/j.buildenv.2021.108088},
+abstract = {{Despite building energy use being one of the largest global energy consumers, building energy simulations rarely take the actual local neighbourhood scale climate into account. A new globally applicable approach is proposed to support buildings energy design. ERA5 (European Centre Reanalysis version 5) data are used with SUEWS (Surface Urban Energy and Water balance Scheme) to obtain (in this example case) an urban typical meteorological year (uTMY) that is usable in building energy modelling. The predicted annual energy demand (heating and cooling) for a representative four-storey London residential apartment using uTMY is 6.9\% less (cf. conventional TMY). New vertical profile coefficients for wind speed and air temperature in EnergyPlus are derived using SUEWS. EneryPlus simulations with these neighbourhood scale coefficients and uTMY data, predict the top two floors have \textbackslashtextasciitilde10\% larger energy demand (cf. the open terrain coefficients with uTMY data). Vertical variations in wind speed have a greater impact on the simulated building energy than equivalent variations in temperature. This globally appliable approach can provide local meteorological data for building energy modelling, improving design for the local context through characterising the surrounding neighbourhood.}},
+pages = {108088},
+volume = {204},
+keywords = {},
 }
